@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.star.gr" version="2.1.2" name="STAR Player" provider-name="Twilight0">
+<addon id="plugin.video.star.gr" version="2.2.0" name="STAR Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="2.4.2" />
-		<import addon="plugin.video.youtube" version="6.4.0"/>
+		<import addon="script.module.tulip" version="2.5.11" />
+		<import addon="plugin.video.youtube" version="6.8.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -20,7 +20,11 @@
 		<source>https://github.com/Twilight0/plugin.video.star.gr</source>
 		<website>http://www.star.gr/</website>
 		<size>228454</size>
-		<news>[B]2.1.2[/B]
+		<news>[B]2.2.0[/B]
+- Updated youtube api key
+- Updated indexing functions
+
+[B]2.1.2[/B]
 - Point to a blank video if live stream is offline
 - Fix resolver for some older videos
 
