@@ -1,3 +1,7 @@
+[B]2.2.0[/B]
+- Updated youtube api key
+- Updated indexing functions
+
 [B]2.1.2[/B]
 - Point to a blank video if live stream is offline
 - Fix resolver for some older videos
